syntax = "proto3";
option java_multiple_files = true;
option java_package = "org.locationtech.geogig.grpc.model";
option java_outer_classname = "ObjectIdRPC";

package grpc;

message ObjectId{
    bytes hash = 1;
}
